--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/express-session": "^1.18.1",
     "@types/md5": "^2.3.5",
     "@types/ms": "^0.7.34",
     "@types/multer": "^1.4.11",
@@ -42,9 +43,12 @@
     "celebrate": "^15.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "csrf-csrf": "^3.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^7.4.1",
+    "express-session": "^1.18.1",
     "file-type": "^19.6.0",
     "jsonwebtoken": "^9.0.2",
     "load-esm": "^1.0.0",
